// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add step to step list and render to screen when added from StepForm 1`] = `
<div>
  <button
    id="saveInterval"
    onClick={[Function]}
  >
    Save
  </button>
  <input
    onChange={[Function]}
    placeholder="name"
    type="text"
    value=""
  />
  <div
    key="0"
  >
    <p>
      Type: 
      Activity
    </p>
    <p>
      Name: 
      Squats
    </p>
    <p>
      Duration: 
      30
    </p>
    <button
      onClick={[Function]}
      value={0}
    >
      Remove
    </button>
  </div>
  <StepForm
    onSubmit={[Function]}
  />
</div>
`;

exports[`should remove step when pressed 1`] = `
<div>
  <button
    id="saveInterval"
    onClick={[Function]}
  >
    Save
  </button>
  <input
    onChange={[Function]}
    placeholder="name"
    type="text"
    value="fitness workout 1"
  />
  <div
    key="0"
  >
    <p>
      Type: 
      activity
    </p>
    <p>
      Name: 
      press-ups
    </p>
    <p>
      Duration: 
      20000
    </p>
    <button
      onClick={[Function]}
      value={0}
    >
      Remove
    </button>
  </div>
  <div
    key="1"
  >
    <p>
      Type: 
      activity
    </p>
    <p>
      Name: 
      crunches
    </p>
    <p>
      Duration: 
      20000
    </p>
    <button
      onClick={[Function]}
      value={1}
    >
      Remove
    </button>
  </div>
  <div
    key="2"
  >
    <p>
      Type: 
      rest
    </p>
    <p>
      Name: 
      rest
    </p>
    <p>
      Duration: 
      10000
    </p>
    <button
      onClick={[Function]}
      value={2}
    >
      Remove
    </button>
  </div>
  <StepForm
    onSubmit={[Function]}
  />
</div>
`;

exports[`should render empty IntervalForm correctly 1`] = `
<div>
  <button
    id="saveInterval"
    onClick={[Function]}
  >
    Save
  </button>
  <input
    onChange={[Function]}
    placeholder="name"
    type="text"
    value=""
  />
  <StepForm
    onSubmit={[Function]}
  />
</div>
`;

exports[`should render pre-filled IntervalForm when sending interval data 1`] = `
<div>
  <button
    id="saveInterval"
    onClick={[Function]}
  >
    Save
  </button>
  <input
    onChange={[Function]}
    placeholder="name"
    type="text"
    value="meditation focus"
  />
  <div
    key="0"
  >
    <p>
      Type: 
      activity
    </p>
    <p>
      Name: 
      focus
    </p>
    <p>
      Duration: 
      30000
    </p>
    <button
      onClick={[Function]}
      value={0}
    >
      Remove
    </button>
  </div>
  <div
    key="1"
  >
    <p>
      Type: 
      rest
    </p>
    <p>
      Name: 
      rest
    </p>
    <p>
      Duration: 
      15000
    </p>
    <button
      onClick={[Function]}
      value={1}
    >
      Remove
    </button>
  </div>
  <div
    key="2"
  >
    <p>
      Type: 
      activity
    </p>
    <p>
      Name: 
      focus
    </p>
    <p>
      Duration: 
      30000
    </p>
    <button
      onClick={[Function]}
      value={2}
    >
      Remove
    </button>
  </div>
  <div
    key="3"
  >
    <p>
      Type: 
      rest
    </p>
    <p>
      Name: 
      rest
    </p>
    <p>
      Duration: 
      15000
    </p>
    <button
      onClick={[Function]}
      value={3}
    >
      Remove
    </button>
  </div>
  <StepForm
    onSubmit={[Function]}
  />
</div>
`;

exports[`should show an error when saving without enough data 1`] = `
<div>
  <button
    id="saveInterval"
    onClick={[Function]}
  >
    Save
  </button>
  <p>
    Please provide a routine name and interval steps.
  </p>
  <input
    onChange={[Function]}
    placeholder="name"
    type="text"
    value=""
  />
  <StepForm
    onSubmit={[Function]}
  />
</div>
`;
